--- a/index.html
+++ b/index.html
@@ -93,7 +93,13 @@
      
         <div class="col bg-light">
             <h5 style="color:#d6370c" >Who Am I</h5>
-            <p  class="text-justify text-dark"> Hi. I am Shafi, a software developer from Queens, NY. I am passionate about different areas of Web Development from back-end technologies (PHP, Django/Python) to front-end technologies (HTML, CSS, and jQuery/Javascript). I am excited about building excellent software that improves the lives of those around me. I've always been curious about technology and would always say to myself wow this is really cool. As I was in the process of completing my Bachelors in Biomedical Informatics I saw a huge breakthrough of different bootcamps (teaching Full-Stack Web Development) and a great deal of people going into these bootcamps. This was first time I took the time to  really check out what this was all about. So, I went on to purchase a course from Udemy called "The Web Developer Bootcamp" by Colt Steele and I really enjoyed learning what was offered in that course. After this first course I soon decided to join The Tech Academy as this was the fastest way to gett in to the field other than tradition method of getting a Bachelors in Computer Science. Aside from web development, I enjoy spending my time by strength training, traveling, and discovering new locations to eat.</p>
+            <p  class="text-justify text-dark"> Hi. I am Shafi, a software developer from Queens, NY. 
+              I am passionate about different areas of Web Development from back-end technologies (PHP, Django/Python) to front-end technologies (HTML, CSS, and jQuery/Javascript). 
+              I am excited about building excellent software that improves the lives of those around me. I've always been curious about technology and would always say to myself wow this is really cool. 
+              As I was in the process of completing my Bachelors in Biomedical Informatics I saw a huge breakthrough of different bootcamps (teaching Full-Stack Web Development) and a great deal of people going into these bootcamps. 
+              This was first time I took the time to  really check out what this was all about. So, I went on to purchase a course from Udemy called "The Web Developer Bootcamp" by Colt Steele and I really enjoyed learning what was offered in that course.
+              After this first course I soon decided to join The Tech Academy as this was the fastest way to gett in to the field other than tradition method of getting a Bachelors in Computer Science.
+              Aside from web development, I enjoy spending my time by strength training, traveling, and discovering new locations to eat.</p>
 
            <!-- <a class="btn btn-light btn-xl js-scroll-trigger" href="#services">Get Started!</a> -->
            </div>
@@ -251,8 +257,8 @@
     <div class="container-fluid p-0">
       <div class="row no-gutters">
         <div class="col-lg-4 col-sm-6">
-          <a class="portfolio-box" href="img/portfolio/fullsize/1.jpg">
-            <img class="img-fluid" src="img/portfolio/thumbnails/1.jpg" alt="">
+          <a class="portfolio-box" href="img/Projects/fullsize/1.jpg">
+            <img class="img-fluid" src="img/Projects/thumbnails/1.jpg" alt="">
             <div class="portfolio-box-caption">
               <div class="project-category text-white-50">
                 Category
@@ -264,8 +270,8 @@
           </a>
         </div>
         <div class="col-lg-4 col-sm-6">
-          <a class="portfolio-box" href="img/portfolio/fullsize/2.jpg">
-            <img class="img-fluid" src="img/portfolio/thumbnails/2.jpg" alt="">
+          <a class="portfolio-box" href="img/Projects/fullsize/2.jpg">
+            <img class="img-fluid" src="img/Projects/thumbnails/2.jpg" alt="">
             <div class="portfolio-box-caption">
               <div class="project-category text-white-50">
                 Category
@@ -277,8 +283,8 @@
           </a>
         </div>
         <div class="col-lg-4 col-sm-6">
-          <a class="portfolio-box" href="img/portfolio/fullsize/3.jpg">
-            <img class="img-fluid" src="img/portfolio/thumbnails/3.jpg" alt="">
+          <a class="portfolio-box" href="img/Projects/fullsize/3.jpg">
+            <img class="img-fluid" src="img/Projects/thumbnails/3.jpg" alt="">
             <div class="portfolio-box-caption">
               <div class="project-category text-white-50">
                 Category
@@ -290,8 +296,8 @@
           </a>
         </div>
         <div class="col-lg-4 col-sm-6">
-          <a class="portfolio-box" href="img/portfolio/fullsize/4.jpg">
-            <img class="img-fluid" src="img/portfolio/thumbnails/4.jpg" alt="">
+          <a class="portfolio-box" href="img/Projects/fullsize/4.jpg">
+            <img class="img-fluid" src="img/Projects/thumbnails/4.jpg" alt="">
             <div class="portfolio-box-caption">
               <div class="project-category text-white-50">
                 Category
@@ -303,8 +309,8 @@
           </a>
         </div>
         <div class="col-lg-4 col-sm-6">
-          <a class="portfolio-box" href="img/portfolio/fullsize/5.jpg">
-            <img class="img-fluid" src="img/portfolio/thumbnails/5.jpg" alt="">
+          <a class="portfolio-box" href="img/Projects/fullsize/5.jpg">
+            <img class="img-fluid" src="img/Projects/thumbnails/5.jpg" alt="">
             <div class="portfolio-box-caption">
               <div class="project-category text-white-50">
                 Category
@@ -316,8 +322,8 @@
           </a>
         </div>
         <div class="col-lg-4 col-sm-6">
-          <a class="portfolio-box" href="img/portfolio/fullsize/6.jpg">
-            <img class="img-fluid" src="img/portfolio/thumbnails/6.jpg" alt="">
+          <a class="portfolio-box" href="img/Projects/fullsize/6.jpg">
+            <img class="img-fluid" src="img/Projects/thumbnails/6.jpg" alt="">
             <div class="portfolio-box-caption p-3">
               <div class="project-category text-white-50">
                 Category
