--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 <div class="col ">
 <div  class="container">
             <div class="col">
-                <img src="chosen_opt.jpg" alt="" class="rounded img-fluid" width="432" height="395">
+                <img src="CHOSEN_opt.jpg" alt="Profile Picture" class="rounded img-fluid" width="432" height="395">
             </div>
 </div>
       
