--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 <div class="col ">
 <div  class="container">
             <div class="col">
-                <img src="CHOSEN_opt.jpg" alt="Profile Picture" class="rounded img-fluid" width="432" height="395">
+                <img src="CHOSEN_opt.jpg" id="profile-image" alt="Profile Picture" class="rounded img-fluid" width="432" height="395">
             </div>
 </div>
       
@@ -95,8 +95,8 @@
             <h5 style="color:#d6370c" >Who Am I</h5>
             <p  class="text-justify text-dark"> Hi. I am Shafi, a software developer from Queens, NY. 
               I am passionate about different areas of Web Development from back-end technologies (PHP, Django/Python) to front-end technologies (HTML, CSS, and jQuery/Javascript). 
-              I am excited about building excellent software that improves the lives of those around me. I've always been curious about technology and would always say to myself wow this is really cool. 
-              As I was in the process of completing my Bachelors in Biomedical Informatics I saw a huge breakthrough of different bootcamps (teaching Full-Stack Web Development) and a great deal of people going into these bootcamps. 
+              I am excited about building excellent software that improves the lives of those around me. I've always been curious about technology and would always say to myself wow this is really cool.</p> 
+              <p>As I was in the process of completing my Bachelors in Biomedical Informatics I saw a huge breakthrough of different bootcamps (teaching Full-Stack Web Development) and a great deal of people going into these bootcamps. 
               This was first time I took the time to  really check out what this was all about. So, I went on to purchase a course from Udemy called "The Web Developer Bootcamp" by Colt Steele and I really enjoyed learning what was offered in that course.
               After this first course I soon decided to join The Tech Academy as this was the fastest way to gett in to the field other than tradition method of getting a Bachelors in Computer Science.
               Aside from web development, I enjoy spending my time by strength training, traveling, and discovering new locations to eat.</p>
