--- a/index.html
+++ b/index.html
@@ -95,9 +95,9 @@
             <h5 style="color:#d6370c" >Who Am I</h5>
             <p  class="text-justify text-dark"> Hi. I am Shafi, a software developer from Queens, NY. 
               I am passionate about different areas of Web Development from back-end technologies (PHP, Django/Python) to front-end technologies (HTML, CSS, and jQuery/Javascript). 
-              I am excited about building excellent software that improves the lives of those around me. I've always been curious about technology and would always say to myself wow this is really cool.</p> 
+              I am excited about building excellent software that improves the lives of those around me. I've always been curious about technology and would always say to myself wow this stuff is really cool.</p> 
               <p class="text-justify text-dark">As I was in the process of completing my Bachelors in Biomedical Informatics I saw a huge breakthrough of different bootcamps (teaching Full-Stack Web Development) and a great deal of people going into these bootcamps. 
-                This was first time I took the time to  really check out what this was all about.</p>
+                This was the first time I took the time to  really check out what this was all about.</p>
                <p class="text-justify text-dark">So, I went on to purchase a course from Udemy called "The Web Developer Bootcamp" by Colt Steele and I really enjoyed learning what was offered in that course.
               After this first course I soon decided to join The Tech Academy as this was the fastest way to gett in to the field other than tradition method of getting a Bachelors in Computer Science.
               Aside from web development, I enjoy spending my time by strength training, traveling, and discovering new locations to eat.</p>
@@ -368,7 +368,9 @@
               </div>
               <br/>
               <br/>
-              <button type="submit" class="btn btn-primary">Submit</button>
+              <button type="button" class="btn btn-primary popover-dismiss" data-container="body" data-toggle="popover" data-placement="right" data-content="Thank you for contacting us! We'll get back to you briefly.">
+                  Popover on right
+                </button>
             </form>
         </div>
       </div>
@@ -397,7 +399,13 @@
   <script src="vendor/magnific-popup/jquery.magnific-popup.min.js"></script>
 
   <!-- Custom scripts for this template -->
-  <script src="js/creative.min.js"></script>
+  <script src="js/creative.min.js">
+
+    $('.popover-dismiss').popover({
+         trigger: 'focus'
+      })
+  
+  </script>
 
 </body>
 
