--- a/index.html
+++ b/index.html
@@ -369,7 +369,7 @@
               <br/>
               <br/>
               <button type="button" class="btn btn-primary popover-dismiss" data-container="body" data-toggle="popover" data-placement="right" data-content="Thank you for contacting us! We'll get back to you briefly.">
-                  Popover on right
+                  Submit
                 </button>
             </form>
         </div>
@@ -389,7 +389,13 @@
       <div class="small text-center text-dark "> Handcrafted with <img src="img/love.png" alt="Love Symbol"> &copy; twentynineteen</div>
     </div>
   </footer>
+  <script src="js/creative.min.js">
 
+    $('.popover-dismiss').popover({
+         trigger: 'focus'
+      })
+  
+  </script>
   <!-- Bootstrap core JavaScript -->
   <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js" ></script>
   <script src="vendor/jquery/jquery.min.js"></script>
@@ -400,13 +406,7 @@
   <script src="vendor/magnific-popup/jquery.magnific-popup.min.js"></script>
 
   <!-- Custom scripts for this template -->
-  <script src="js/creative.min.js">
-
-    $('.popover-dismiss').popover({
-         trigger: 'focus'
-      })
   
-  </script>
 
 </body>
 
