--- a/index.html
+++ b/index.html
@@ -389,13 +389,15 @@
       <div class="small text-center text-dark "> Handcrafted with <img src="img/love.png" alt="Love Symbol"> &copy; twentynineteen</div>
     </div>
   </footer>
-  <script src="js/creative.min.js">
+  <script src="js/creative.min.js"></script>
 
-    $('.popover-dismiss').popover({
-         trigger: 'focus'
-      })
+  <script>
+  $('.popover-dismiss').popover({
+      trigger: 'focus'
+   })
+</script>
+    
   
-  </script>
   <!-- Bootstrap core JavaScript -->
   <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js" ></script>
   <script src="vendor/jquery/jquery.min.js"></script>
