--- a/index.html
+++ b/index.html
@@ -407,7 +407,7 @@
   
   <script>
       $('.popover-dismiss').popover({
-          trigger: 'focus'
+          trigger: 'click'
        })
     </script>
 </body>
