added project cinema

--- a/index.html
+++ b/index.html
@@ -259,14 +259,14 @@
     <div class="container-fluid p-0">
       <div class="row no-gutters">
         <div class="col-lg-4 col-sm-6">
-          <a class="portfolio-box" href="img/Projects/fullsize/1.jpg">
-            <img class="img-fluid" src="img/Projects/thumbnails/1.jpg" alt="">
+          <a class="portfolio-box" href="img/Projects/fullsize/AcademyCinemas.png">
+            <img class="img-fluid" src="img/Projects/thumbnails/AcademyCinemas.png" alt="">
             <div class="portfolio-box-caption">
               <div class="project-category text-white-50">
                 Category
               </div>
               <div class="project-name">
-                Project Name
+                Academy Cinemas 
               </div>
             </div>
           </a>
