--- a/index.html
+++ b/index.html
@@ -261,9 +261,9 @@
         <div class="col-lg-4 col-sm-6">
           <a class="portfolio-box" href="img/Projects/fullsize/AcademyCinemas.png">
             <img class="img-fluid" src="img/Projects/thumbnails/AcademyCinemas.png" alt="">
-            <div class="portfolio-box-caption">
+            <!---<div class="portfolio-box-caption">
               <div class="project-category text-white-50">
-              </div>
+              </div> -->
               <div class="project-name">
                 Academy Cinemas 
               </div>
