--- a/index.html
+++ b/index.html
@@ -75,11 +75,11 @@
 
   <!-- About Section -->
   <section class="page-section bg-light" id="about"  
-  style="background: url(./img/nyc2.jpg) no-repeat center center fixed; 
+  <!--</section>style="background: url(./img/nyc2.jpg) no-repeat center center fixed; 
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
-  background-size: cover;">
+  background-size: cover;">-->
 <div class="col ">
 <div  class="container">
             <div class="col">
