--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
   </header>
 
   <!-- About Section -->
-  <section class="page-section bg-light" id="about"  
+  <section class="page-section bg-light" id="about"  >
   <!--</section>style="background: url(./img/nyc2.jpg) no-repeat center center fixed; 
   -webkit-background-size: cover;
   -moz-background-size: cover;
