--- a/index.html
+++ b/index.html
@@ -74,8 +74,10 @@
   </header>
 
   <!-- About Section -->
-  <section class="page-section bg-light" id="about"  >
-  <!--</section>style="background: url(./img/nyc2.jpg) no-repeat center center fixed; 
+  <section class="page-section bg-light" id="about" >
+     <img name="slide" width="" height=""> 
+  </section>
+  <!---style="background: url(./img/nyc2.jpg) no-repeat center center fixed; 
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
