--- a/index.html
+++ b/index.html
@@ -83,6 +83,7 @@
   -o-background-size: cover;
 background-size: cover;"-->
 
+<section>
 <div id="carouselExampleInterval" class="carousel slide" data-ride="carousel">
     <div class="carousel-inner">
       <div class="carousel-item active" data-interval="10000">
@@ -104,6 +105,7 @@ background-size: cover;"-->
       <span class="sr-only">Next</span>
     </a>
   </div>
+</section>
 <div class="col ">
 <div  class="container">
             <div class="col">
