--- a/index.html
+++ b/index.html
@@ -87,10 +87,10 @@ background-size: cover;"-->
 <div id="carouselExampleInterval" class="carousel slide" data-ride="carousel">
     <div class="carousel-inner">
       <div class="carousel-item active" data-interval="10000">
-        <img src="..." class="d-block w-100" alt="...">
+        <img src="./img/nyc2.jpg" class="d-block w-100" alt="...">
       </div>
       <div class="carousel-item" data-interval="2000">
-        <img src="..." class="d-block w-100" alt="...">
+        <img src="./img/nyc1.jpg" class="d-block w-100" alt="...">
       </div>
       <div class="carousel-item">
         <img src="..." class="d-block w-100" alt="...">
