--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 
 
   <section class="page-section bg-light" id="about" 
-  <!----></section>style="background: url(./img/nyc2.jpg) no-repeat center center fixed; 
+  <!--</section>style="background: url(./img/nyc2.jpg) no-repeat center center fixed; 
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
