--- a/index.html
+++ b/index.html
@@ -77,35 +77,13 @@
 
 
   <section class="page-section bg-light" id="about" 
-  <!--</section>style="background: url(./img/nyc2.jpg) no-repeat center center fixed; 
+  style="background: url(./img/nyc2.jpg) no-repeat center center fixed; 
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
-background-size: cover;"-->
+background-size: cover;">
 
-<section>
-<div id="carouselExampleInterval" class="carousel slide" data-ride="carousel">
-    <div class="carousel-inner">
-      <div class="carousel-item active" data-interval="10000">
-        <img src="./img/nyc2.jpg" class="d-block w-100" alt="...">
-      </div>
-      <div class="carousel-item" data-interval="2000">
-        <img src="./img/nyc1.jpg" class="d-block w-100" alt="...">
-      </div>
-      <div class="carousel-item">
-        <img src="..." class="d-block w-100" alt="...">
-      </div>
-    </div>
-    <a class="carousel-control-prev" href="#carouselExampleInterval" role="button" data-slide="prev">
-      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-      <span class="sr-only">Previous</span>
-    </a>
-    <a class="carousel-control-next" href="#carouselExampleInterval" role="button" data-slide="next">
-      <span class="carousel-control-next-icon" aria-hidden="true"></span>
-      <span class="sr-only">Next</span>
-    </a>
-  </div>
-</section>
+
 <div class="col ">
 <div  class="container">
             <div class="col">
