--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
-background-size: cover;">
+   background-size: cover;">
 
 
 <div class="col ">
@@ -265,9 +265,9 @@ background-size: cover;">
         <div class="col-lg-4 col-sm-6">
           <a class="portfolio-box" href="img/Projects/fullsize/AcademyCinemas.png">
             <img class="img-fluid" src="img/Projects/thumbnails/AcademyCinemas.png" alt="">
-            <!---<div class="portfolio-box-caption">
+            <div class="portfolio-box-caption">
               <div class="project-category text-white-50">
-              </div> -->
+              </div> 
               <div class="project-name">
                 Academy Cinemas 
               </div>
