--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
     </div>
   </section> -->
 
-  <!-- Portfolio Section -->
+  <!-- Portfolio Section 
   <section id="portfolio">
     <div class="container-fluid p-0">
       <div class="row no-gutters">
@@ -341,7 +341,7 @@
         </div>
       </div>
     </div>
-  </section>
+  </section>-->
 
   <!-- Call to Action Section -->
   <!--<section class="page-section bg-dark text-white">
@@ -350,7 +350,38 @@
       <a class="btn btn-light btn-xl" href="https://startbootstrap.com/themes/creative/">Download Now!</a>
     </div>
   </section> -->
-
+  <div class="card-deck">
+      <div class="card">
+        <img src="..." class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">Card title</h5>
+          <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+        </div>
+        <div class="card-footer">
+          <small class="text-muted">Last updated 3 mins ago</small>
+        </div>
+      </div>
+      <div class="card">
+        <img src="..." class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">Card title</h5>
+          <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+        </div>
+        <div class="card-footer">
+          <small class="text-muted">Last updated 3 mins ago</small>
+        </div>
+      </div>
+      <div class="card">
+        <img src="..." class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">Card title</h5>
+          <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+        </div>
+        <div class="card-footer">
+          <small class="text-muted">Last updated 3 mins ago</small>
+        </div>
+      </div>
+    </div>
   <!-- Contact Section -->
   <section class="page-section bg-secondary" id="contact">
     <div class="container">
