--- a/index.html
+++ b/index.html
@@ -352,7 +352,7 @@
   </section> -->
   <div class="card-deck">
       <div class="card">
-        <img src="./img/Space Station.png" class="card-img-top" alt="...">
+        <img src="Space Station.png" class="card-img-top" alt="...">
         <div class="card-body">
           <h5 class="card-title">Card title</h5>
           <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
