--- a/index.html
+++ b/index.html
@@ -350,25 +350,30 @@
       <a class="btn btn-light btn-xl" href="https://startbootstrap.com/themes/creative/">Download Now!</a>
     </div>
   </section> -->
+
+<div>
+  <h2>Projects</h2>
+
+</div>
   <div class="card-deck">
       <div class="card">
         <img src="Space Station.png" class="card-img-top" alt="...">
         <div class="card-body">
-          <h5 class="card-title">Card title</h5>
-          <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+          <h5 class="card-title">The Space Station </h5>
+          <p class="card-text">I have utilized two of most fundamental languages (HTML & CSS) of Web Development for this project.</p>
         </div>
         <div class="card-footer">
-          <small class="text-muted">Last updated 3 mins ago</small>
+          <small class="text-muted"></small>
         </div>
       </div>
       <div class="card">
-        <img src="..." class="card-img-top" alt="...">
+        <img src="AcademyCinemas.jpg" class="card-img-top" alt="...">
         <div class="card-body">
-          <h5 class="card-title">Card title</h5>
-          <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+          <h5 class="card-title">Academy Cinemas</h5>
+          <p class="card-text">This project was solely based on the CSS framework called Bootstrap.</p>
         </div>
         <div class="card-footer">
-          <small class="text-muted">Last updated 3 mins ago</small>
+          <small class="text-muted"></small>
         </div>
       </div>
       <div class="card">
