--- a/index.html
+++ b/index.html
@@ -350,10 +350,11 @@
       <a class="btn btn-light btn-xl" href="https://startbootstrap.com/themes/creative/">Download Now!</a>
     </div>
   </section> -->
-
+<div>
 <div>
   <h2>Projects</h2>
 
+</div>
 </div>
   <div class="card-deck">
       <div class="card">
@@ -367,7 +368,7 @@
         </div>
       </div>
       <div class="card">
-        <img src="AcademyCinemas.jpg" class="card-img-top" alt="...">
+        <img src="AcademyCinemas.png" class="card-img-top" alt="...">
         <div class="card-body">
           <h5 class="card-title">Academy Cinemas</h5>
           <p class="card-text">This project was solely based on the CSS framework called Bootstrap.</p>
@@ -379,11 +380,11 @@
       <div class="card">
         <img src="..." class="card-img-top" alt="...">
         <div class="card-body">
-          <h5 class="card-title">Card title</h5>
-          <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+          <h5 class="card-title">Pizza-Menu System</h5>
+          <p class="card-text">JavaScript was the core language applied for this program with a bit of CSS for its finishing touches.</p>
         </div>
         <div class="card-footer">
-          <small class="text-muted">Last updated 3 mins ago</small>
+          <small class="text-muted"></small>
         </div>
       </div>
     </div>
