--- a/index.html
+++ b/index.html
@@ -367,7 +367,7 @@
           <small class="text-muted"></small>
         </div>
       </div>
-      <div class="card" style ="color:#545454;" >
+      <div class="card" style ="background-color:#545454;" >
         <img src="AcademyCinemas.png" class="card-img-top" alt="...">
         <div class="card-body">
           <h5 class="card-title">Academy Cinemas</h5>
