--- a/index.html
+++ b/index.html
@@ -356,7 +356,7 @@
 
 </div>
 </div>
-  <div class="card-deck">
+  <div class="card-deck"style ="background-color:#545454;">
       <div class="card">
         <img src="Space Station.png" class="card-img-top" alt="...">
         <div class="card-body">
@@ -367,7 +367,7 @@
           <small class="text-muted"></small>
         </div>
       </div>
-      <div class="card" style ="background-color:#545454;" >
+      <div class="card" >
         <img src="AcademyCinemas.png" class="card-img-top" alt="...">
         <div class="card-body">
           <h5 class="card-title">Academy Cinemas</h5>
