--- a/index.html
+++ b/index.html
@@ -358,7 +358,7 @@
 </div>
   <div class="card-deck"style ="background-color:#545454;">
       <div class="card">
-        <img src="Space Station.png" class="card-img-top" alt="...">
+        <img src="Space Station.png" class="card-img-top" alt="The Space Station" width="250" height="250">
         <div class="card-body">
           <h5 class="card-title">The Space Station </h5>
           <p class="card-text">I have utilized two of most fundamental languages (HTML & CSS) of Web Development for this project.</p>
@@ -368,7 +368,7 @@
         </div>
       </div>
       <div class="card" >
-        <img src="AcademyCinemas.png" class="card-img-top" alt="...">
+        <img src="AcademyCinemas.png" class="card-img-top" alt="Academy Cinemas" width="250" height="250">
         <div class="card-body">
           <h5 class="card-title">Academy Cinemas</h5>
           <p class="card-text">This project was solely based on the CSS framework called Bootstrap.</p>
