--- a/index.html
+++ b/index.html
@@ -350,15 +350,15 @@
       <a class="btn btn-light btn-xl" href="https://startbootstrap.com/themes/creative/">Download Now!</a>
     </div>
   </section> -->
-<div>
+<section style ="background-color:#5499C7;">
 <div>
   <h2>Projects</h2>
 
 </div>
 </div>
-  <div class="card-deck"style ="background-color:#545454;">
+  <div class="card-deck">
       <div class="card">
-        <img src="Space Station.png" class="card-img-top" alt="The Space Station" width="250" height="250">
+        <img src="Space Station.png" class="card-img-top" alt="The Space Station" width="250" height="350">
         <div class="card-body">
           <h5 class="card-title">The Space Station </h5>
           <p class="card-text">I have utilized two of most fundamental languages (HTML & CSS) of Web Development for this project.</p>
@@ -368,7 +368,7 @@
         </div>
       </div>
       <div class="card" >
-        <img src="AcademyCinemas.png" class="card-img-top" alt="Academy Cinemas" width="250" height="250">
+        <img src="AcademyCinemas.png" class="card-img-top" alt="Academy Cinemas" width="250" height="550">
         <div class="card-body">
           <h5 class="card-title">Academy Cinemas</h5>
           <p class="card-text">This project was solely based on the CSS framework called Bootstrap.</p>
@@ -388,6 +388,9 @@
         </div>
       </div>
     </div>
+  </section>
+
+
   <!-- Contact Section -->
   <section class="page-section bg-secondary" id="contact">
     <div class="container">
