--- a/index.html
+++ b/index.html
@@ -352,9 +352,11 @@
   </section> -->
 <section style ="background-color:#5499C7;">
 <div>
-  <h2>Projects</h2>
+<div>
+  <h2 style="color:#ffffff" style="text-align:center">Projects</h2>
 
 </div>
+
 </div>
   <div class="card-deck">
       <div class="card">
