--- a/index.html
+++ b/index.html
@@ -358,7 +358,7 @@
 </div>
 
 </div>
-  <div class="card-deck">
+  <div class="card-deck" width="250" height="500">
       <div class="card">
         <img src="Space Station.png" class="card-img-top" alt="The Space Station" width="250" height="350">
         <div class="card-body">
@@ -370,7 +370,7 @@
         </div>
       </div>
       <div class="card" >
-        <img src="AcademyCinemas.png" class="card-img-top" alt="Academy Cinemas" width="250" height="550">
+        <img src="AcademyCinemas.png" class="card-img-top" alt="Academy Cinemas" width="250" height="450">
         <div class="card-body">
           <h5 class="card-title">Academy Cinemas</h5>
           <p class="card-text">This project was solely based on the CSS framework called Bootstrap.</p>
