--- a/index.html
+++ b/index.html
@@ -353,12 +353,12 @@
 <section style ="background-color:#5499C7;">
 <div>
 <div>
-  <h2 style="color:#ffffff" style="text-align:center">Projects</h2>
+  <h2 id="project">Projects</h2>
 
 </div>
-
 </div>
-  <div class="card-deck" width="200" height="500">
+<div>
+  <div class="card-deck">
       <div class="card">
         <img src="Space Station.png" class="card-img-top" alt="The Space Station" width="250" height="350">
         <div class="card-body">
@@ -390,6 +390,7 @@
         </div>
       </div>
     </div>
+  </div>
   </section>
 <br>
 <br>
