--- a/index.html
+++ b/index.html
@@ -357,6 +357,7 @@
 
 </div>
 </div>
+<!--
 <div>
   <div class="card-deck">
       <div class="card">
@@ -390,10 +391,8 @@
         </div>
       </div>
     </div>
-  </div>
+  </div>-->
   </section>
-<br>
-<br>
 
 
   <!-- Contact Section -->
