--- a/index.html
+++ b/index.html
@@ -353,8 +353,9 @@
 <section style ="background-color:#5499C7;">
 <div>
 <div>
+<div>
   <h2 id="project">Projects</h2>
-
+</div>
 </div>
 </div>
 <!--
