padding project title

--- a/index.html
+++ b/index.html
@@ -351,11 +351,11 @@
     </div>
   </section> -->
 <section style ="background-color:#5499C7;">
+<div id="space">
 <div>
-<div>
-<div>
+
   <h2 id="project">Projects</h2>
-</div>
+
 </div>
 </div>
 <!--
