--- a/index.html
+++ b/index.html
@@ -259,8 +259,11 @@
     </div>
   </section> -->
 
-  Portfolio Section 
+ <!---Portfolio Section -->
   <section id="portfolio">
+    <div>
+      <h2 style="text-align:center;">Projects</h2>
+    </div>
     <div class="container-fluid p-0">
       <div class="row no-gutters">
         <div class="col-lg-4 col-sm-6">
