--- a/index.html
+++ b/index.html
@@ -77,12 +77,7 @@
   <!-- About Section -->
 
 
-  <section class="page-section bg-light" id="about" 
-  style="background: url(./img/nyc2.jpg) no-repeat center center fixed; 
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-   background-size: cover;">
+  <section class="page-section bg-light" id="about" style="background-color:#FAD7A0;">
 
 
 <div class="col ">
