--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
   <!-- About Section -->
 
 
-  <section class="page-section bg-light" id="about" style="background-color:#FAD7A0;">
+  <section class="page-section bg-light" id="about">
 
 
 <div class="col ">
@@ -90,7 +90,7 @@
 </div>
 
  <br />
-    <div class="container">
+    <div class="container"style="background-color:#FAD7A0;">
      
         <div class="col bg-light">
             <h5 style="color:#d6370c" >Who Am I</h5>
