--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
   <!-- About Section -->
 
 
-  <section class="page-section bg-light" id="about">
+  <section class="page-section" id="about" style="background-color:#FAD7A0;">
 
 
 <div class="col ">
@@ -92,7 +92,7 @@
  <br />
     <div class="container"style="background-color:#FAD7A0;">
      
-        <div class="col bg-light">
+        <div class="col">
             <h5 style="color:#d6370c" >Who Am I</h5>
             <p  class="text-justify text-dark"> Hi. I am Shafi, a software developer from Queens, NY. 
               I am passionate about different areas of Web Development from back-end technologies (PHP, Django/Python) to front-end technologies (HTML, CSS, and jQuery/Javascript). 
