--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
      
         <div class="col">
             <h5 style="color:#d6370c" >Who Am I</h5>
-            <p  class="text-justify text-dark"> Hi. I am Shafi, a software developer from Queens, NY. 
+            <p  class="text-justify text-light"> Hi. I am Shafi, a software developer from Queens, NY. 
               I am passionate about different areas of Web Development from back-end technologies (PHP, Django/Python) to front-end technologies (HTML, CSS, and jQuery/Javascript). 
               I am excited about building excellent software that improves the lives of those around me. I've always been curious about technology and would always say to myself wow this stuff is really cool.</p> 
               <p class="text-justify text-dark">As I was in the process of completing my Bachelors in Biomedical Informatics I saw a huge breakthrough of different bootcamps (teaching Full-Stack Web Development) and a great deal of people going into these bootcamps. 
