--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
          </div>
   </section>
 
-  <div class="container-fluid mt-4 mb-4" id="skills">
+  <div class="container-fluid mt-4 mb-4" id="skills"style="background-color:#F1948A;">
       <div class="row justify-content-center">
         
           <div class="row justify-content-center">
