--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
   <!-- About Section -->
 
 
-  <section class="page-section" id="about" style="background-color:#FAD7A0;">
+  <section class="page-section" id="about" style="background-color:#F1948A;">
 
 
 <div class="col ">
@@ -90,7 +90,7 @@
 </div>
 
  <br />
-    <div class="container"style="background-color:#FAD7A0;">
+    <div class="container"style="background-color:#F1948A;">
      
         <div class="col">
             <h5 style="color:#d6370c" >Who Am I</h5>
@@ -108,7 +108,7 @@
          </div>
   </section>
 
-  <div class="container-fluid mt-4 mb-4" id="skills"style="background-color:#F1948A;">
+  <div class="container-fluid mt-4 mb-4" id="skills"style="background-color:#FAD7A0;">
       <div class="row justify-content-center">
         
           <div class="row justify-content-center">
