--- a/index.html
+++ b/index.html
@@ -78,8 +78,6 @@
 
 
   <section class="page-section" id="about" style="background-color:#F1948A;">
-
-
 <div class="col ">
 <div  class="container">
             <div class="col">
@@ -92,7 +90,7 @@
  <br />
     <div class="container"style="background-color:#F1948A;">
      
-        <div class="col">
+       <!-- <div class="col"> -->
             <h5 style="color:#d6370c" >Who Am I</h5>
             <p  class="text-justify text-light"> Hi. I am Shafi, a software developer from Queens, NY. 
               I am passionate about different areas of Web Development from back-end technologies (PHP, Django/Python) to front-end technologies (HTML, CSS, and jQuery/Javascript). 
@@ -104,7 +102,7 @@
               Aside from web development, I enjoy spending my time by strength training, traveling, and discovering new locations to eat.</p>
 
            <!-- <a class="btn btn-light btn-xl js-scroll-trigger" href="#services">Get Started!</a> -->
-           </div>
+           <!--</div>-->
          </div>
   </section>
 
