--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
   <!-- About Section -->
 
 
-  <section class="page-section" id="about" style="background-color:#F1948A;">
+  <section class="page-section" id="about" >
 <div class="col ">
 <div  class="container">
             <div class="col">
