--- a/index.html
+++ b/index.html
@@ -77,8 +77,8 @@
   <!-- About Section -->
 
 
-  
-<div class="col "class="page-section" id="about" style="background-color:#F1948A;">
+<div class="page-section" id="about" style="background-color:#F1948A;">
+<div class="col">
 <div  class="container">
             <div class="col">
                 <img src="CHOSEN_opt.jpg" id="profile-image" alt="Profile Picture" class="rounded img-fluid" width="432" height="395">
@@ -101,6 +101,7 @@
            <!-- <a class="btn btn-light btn-xl js-scroll-trigger" href="#services">Get Started!</a> -->
                
          </div>
+</div>
 </div>
  
 
