--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
     <div>
       <h2 style="text-align:center;">Projects</h2>
     </div>
-    <div class="container-fluid p-0">
+    <div class="container-fluid p-0 mb-1">
       <div class="row no-gutters">
         <div class="col-lg-4 col-sm-6">
           <a class="portfolio-box" href="img/Projects/fullsize/AcademyCinemas.png">
