--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
       <div class="row no-gutters">
         <div class="col-lg-4 col-sm-6">
           <a class="portfolio-box" href="img/Projects/fullsize/AcademyCinemas.png">
-            <img class="img-fluid" src="img/Projects/thumbnails/AcademyCinemas.png" alt="">
+            <img class="img-fluid" src="" alt="">
             <div class="portfolio-box-caption">
               <div class="project-category text-white-50">
               </div> 
