--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
           </a>
         </div>
         <div class="col-lg-4 col-sm-6">
-          <a class="portfolio-box" href="img/Projects/fullsize/2.jpg">
+          <a class="portfolio-box" href="img/Projects/fullsize/Space Station.png">
             <img class="img-fluid" src="img/Projects/thumbnails/2.jpg" alt="">
             <div class="portfolio-box-caption">
               <div class="project-category text-white-50">
