--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
     <div class="container-fluid p-0 mb-1">
       <div class="row no-gutters">
         <div class="col-lg-4 col-sm-6">
-          <a class="portfolio-box" href="img/Projects/fullsize/AcademyCinemas.png">
+          <a class="portfolio-box" href="">
             <img class="img-fluid" src="img/Projects/thumbnails/AcademyCinemas.png" alt="">
             <div class="portfolio-box-caption">
               <div class="project-category text-white-50">
