--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
       <div class="row no-gutters">
         <div class="col-lg-4 col-sm-6">
           <a class="portfolio-box" href="img/Projects/fullsize/AcademyCinemas.png">
-            <img class="img-fluid" id="academy" src="img/Projects/thumbnails/AcademyCinemas.png" alt="">
+            <img class="img-fluid" class="project-photo" src="img/Projects/thumbnails/AcademyCinemas.png" alt="">
             <div class="portfolio-box-caption">
               <div class="project-category text-white-50">
               </div> 
@@ -235,7 +235,7 @@
         </div>
         <div class="col-lg-4 col-sm-6">
           <a class="portfolio-box" href="img/Projects/fullsize/Space Station.png">
-            <img class="img-fluid" id="space" src="img/Projects/thumbnails/Space Station.png" alt="">
+            <img class="img-fluid" class="project-photo" src="img/Projects/thumbnails/Space Station.png" alt="">
             <div class="portfolio-box-caption">
               <div class="project-category text-white-50">
                 Category
