color project title

--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
  <!---Portfolio Section -->
   <section id="portfolio"style="background-color:#5499C7;">
     <div>
-      <h2 style="text-align:center;">Projects</h2>
+      <h2 style="text-align:center; color: #ffffff;"">Projects</h2>
     </div>
     <div class="container-fluid p-0 mb-1">
       <div class="row no-gutters">
