--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
     </div>
     <div class="card-columns">
         <div class="card">
-          <img src="img/Projects/thumbnails/AcademyCinemas.png" class="project-photo" class="card-img-top" alt="...">
+          <img  style="width:50px;"  src="img/Projects/thumbnails/AcademyCinemas.png" class="project-photo" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">Card title that wraps to a new line</h5>
             <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
@@ -238,7 +238,7 @@
           </blockquote>
         </div>
         <div class="card">
-          <img src="img/Projects/thumbnails/Space Station.png" class="project-photo" class="card-img-top" alt="...">
+          <img src="img/Projects/thumbnails/Space Station.png"  class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">Card title</h5>
             <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
