--- a/index.html
+++ b/index.html
@@ -223,8 +223,8 @@
         <div class="card">
           <img  style="width:500px;"  src="img/Projects/thumbnails/AcademyCinemas.png" class="project-photo" class="card-img-top" alt="...">
           <div class="card-body">
-            <h5 class="card-title">Card title that wraps to a new line</h5>
-            <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+            <h5 class="card-title">Academy Cinemas</h5>
+            <p class="card-text">This resulted by purely utilizing the CSS framwork, Bootstrap.</p>
           </div>
         </div>
         <div class="card p-3">
