--- a/index.html
+++ b/index.html
@@ -221,27 +221,25 @@
     </div>
     <div class="card-columns">
         <div class="card">
-          <img  style="width:400px;"  src="img/Projects/thumbnails/AcademyCinemas.png" class="project-photo" class="card-img-top" alt="...">
+          <img  style="width:450px;"  src="img/Projects/thumbnails/AcademyCinemas.png" class="project-photo" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">Academy Cinemas</h5>
             <p class="card-text">This resulted by purely utilizing the CSS framwork, Bootstrap.</p>
           </div>
         </div>
-        <div class="card p-3">
-          <blockquote class="blockquote mb-0 card-body">
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
-            <footer class="blockquote-footer">
-              <small class="text-muted">
-                Someone famous in <cite title="Source Title">Source Title</cite>
-              </small>
-            </footer>
-          </blockquote>
-        </div>
+        <div class="card">
+            <img src="img/Projects/thumbnails/"  class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title"></h5>
+              <p class="card-text"></p>
+              <p class="card-text"><small class="text-muted"></small></p>
+            </div>
+          </div>
         <div class="card">
           <img src="img/Projects/thumbnails/Space Station.png"  class="card-img-top" alt="...">
           <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+            <h5 class="card-title">The Space Station</h5>
+            <p class="card-text">The Space is one of my first projects. It's a product of two of the most fundamental languages of the Web Development (HTML & CSS).</p>
             <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
           </div>
         </div>
