--- a/index.html
+++ b/index.html
@@ -221,10 +221,10 @@
     </div>
     <div class="card-columns">
         <div class="card">
-          <img  style="width:450px;"  src="img/Projects/thumbnails/AcademyCinemas.png" class="project-photo" class="card-img-top" alt="...">
+          <img  style="width:460px;"  src="img/Projects/thumbnails/AcademyCinemas.png" class="project-photo" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">Academy Cinemas</h5>
-            <p class="card-text">This resulted by purely utilizing the CSS framwork, Bootstrap.</p>
+            <p class="card-text">The Academy Cinemas project resulted by purely utilizing the CSS framwork, Bootstrap.</p>
           </div>
         </div>
         <div class="card">
@@ -239,7 +239,7 @@
           <img src="img/Projects/thumbnails/Space Station.png"  class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">The Space Station</h5>
-            <p class="card-text">The Space is one of my first projects. It's a product of two of the most fundamental languages of the Web Development (HTML & CSS).</p>
+            <p class="card-text">The Space Station is one of my first projects. It's a product of two of the most fundamental languages of the Web Development (HTML & CSS).</p>
             <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
           </div>
         </div>
