--- a/index.html
+++ b/index.html
@@ -220,11 +220,11 @@
       <h2 style="text-align:center; color: #ffffff;"">Projects</h2>
     </div>
     <div class="card-columns">
-        <div class="card">
+        <div class="card bg-light">
           <img  style="width:460px;"  src="img/Projects/thumbnails/AcademyCinemas.png" class="project-photo" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">Academy Cinemas</h5>
-            <p class="card-text">The Academy Cinemas project resulted by purely utilizing the CSS framwork, Bootstrap.</p>
+            <p class="card-text">The Academy Cinemas project resulted by purely utilizing the CSS framework, Bootstrap.</p>
           </div>
         </div>
         <div class="card">
@@ -235,7 +235,7 @@
               <p class="card-text"><small class="text-muted"></small></p>
             </div>
           </div>
-        <div class="card">
+        <div class="card bg-light">
           <img src="img/Projects/thumbnails/Space Station.png"  class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">The Space Station</h5>
@@ -243,41 +243,35 @@
             <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
           </div>
         </div>
-        <div class="card bg-primary text-white text-center p-3">
-          <blockquote class="blockquote mb-0">
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat.</p>
-            <footer class="blockquote-footer text-white">
-              <small>
-                Someone famous in <cite title="Source Title">Source Title</cite>
-              </small>
-            </footer>
-          </blockquote>
-        </div>
+        <div class="card bg-light">
+            <img  style="width:460px;"  src="img/Projects/thumbnails/AcademyCinemas.png" class="project-photo" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Academy Cinemas</h5>
+              <p class="card-text">The Academy Cinemas project resulted by purely utilizing the CSS framework, Bootstrap.</p>
+            </div>
+          </div>
         <div class="card text-center">
           <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">This card has a regular title and short paragraphy of text below it.</p>
-            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+            <h5 class="card-title"></h5>
+            <p class="card-text"></p>
+            <p class="card-text"><small class="text-muted"></small></p>
           </div>
         </div>
         <div class="card">
           <img src="..." class="card-img-top" alt="...">
         </div>
-        <div class="card p-3 text-right">
-          <blockquote class="blockquote mb-0">
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
-            <footer class="blockquote-footer">
-              <small class="text-muted">
-                Someone famous in <cite title="Source Title">Source Title</cite>
-              </small>
-            </footer>
-          </blockquote>
-        </div>
+        <div class="card bg-light">
+            <img  style="width:460px;"  src="img/Projects/thumbnails/AcademyCinemas.png" class="project-photo" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Academy Cinemas</h5>
+              <p class="card-text">The Academy Cinemas project resulted by purely utilizing the CSS framework, Bootstrap.</p>
+            </div>
+          </div>
         <div class="card">
           <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">This is another card with title and supporting text below. This card has some additional content to make it slightly taller overall.</p>
-            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+            <h5 class="card-title"></h5>
+            <p class="card-text"> </p>
+            <p class="card-text"><small class="text-muted"></small></p>
           </div>
         </div>
       </div>
