--- a/index.html
+++ b/index.html
@@ -225,29 +225,30 @@
           <div class="card-body">
             <h5 class="card-title">Academy Cinemas</h5>
             <p class="card-text">The Academy Cinemas project resulted by purely utilizing the CSS framework, Bootstrap.</p>
+            <a href="#" class="btn btn-primary">Source Code</a>
           </div>
         </div>
         <div class="card">
             <img src="img/Projects/thumbnails/"  class="card-img-top" alt="...">
             <div class="card-body">
-              <h5 class="card-title"></h5>
+              <h5 class="card-title">Pizza-Menu System</h5>
               <p class="card-text"></p>
-              <p class="card-text"><small class="text-muted"></small></p>
+              <a href="#" class="btn btn-primary">Source Code</a>
             </div>
           </div>
         <div class="card bg-light">
           <img src="img/Projects/thumbnails/Space Station.png"  class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">The Space Station</h5>
-            <p class="card-text">The Space Station is one of my first projects. It's a product of two of the most fundamental languages of the Web Development (HTML & CSS).</p>
-            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+            <p class="card-text">The Space Station is one of my first projects. It's a product of two of the most fundamental languages of Web Development (HTML & CSS).</p>
+            <a href="#" class="btn btn-primary">Source Code</a>
           </div>
         </div>
         <div class="card bg-light">
-            <img  style="width:460px;"  src="img/Projects/thumbnails/AcademyCinemas.png" class="project-photo" class="card-img-top" alt="...">
+            <img  style="width:460px;"  src="" class="project-photo" class="card-img-top" alt="...">
             <div class="card-body">
-              <h5 class="card-title">Academy Cinemas</h5>
-              <p class="card-text">The Academy Cinemas project resulted by purely utilizing the CSS framework, Bootstrap.</p>
+              <h5 class="card-title"></h5>
+              <p class="card-text"></p>
             </div>
           </div>
         <div class="card text-center">
@@ -261,10 +262,10 @@
           <img src="..." class="card-img-top" alt="...">
         </div>
         <div class="card bg-light">
-            <img  style="width:460px;"  src="img/Projects/thumbnails/AcademyCinemas.png" class="project-photo" class="card-img-top" alt="...">
+            <img  style="width:460px;"  src="" class="project-photo" class="card-img-top" alt="...">
             <div class="card-body">
-              <h5 class="card-title">Academy Cinemas</h5>
-              <p class="card-text">The Academy Cinemas project resulted by purely utilizing the CSS framework, Bootstrap.</p>
+              <h5 class="card-title"></h5>
+              <p class="card-text"></p>
             </div>
           </div>
         <div class="card">
