--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
             <div class="card-body">
               <h5 class="card-title">Pizza-Menu System</h5>
               <p class="card-text"></p>
-              <a href="#" class="btn btn-primary">Source Code</a>
+              <a href="#" class="btn btn-secondary">Source Code</a>
             </div>
           </div>
         <div class="card bg-light">
@@ -241,7 +241,7 @@
           <div class="card-body">
             <h5 class="card-title">The Space Station</h5>
             <p class="card-text">The Space Station is one of my first projects. It's a product of two of the most fundamental languages of Web Development (HTML & CSS).</p>
-            <a href="https://github.com/rshafi2/The-Tech-Academy-Basic-HTML-CSS-Projects/tree/master/The%20Space%20Station%20Project" class="btn btn-primary">Source Code</a>
+            <a href="https://github.com/rshafi2/The-Tech-Academy-Basic-HTML-CSS-Projects/tree/master/The%20Space%20Station%20Project" class="btn btn-secondary">Source Code</a>
           </div>
         </div>
         <div class="card bg-light">
