--- a/index.html
+++ b/index.html
@@ -228,12 +228,12 @@
             <a href="#" class="btn btn-danger">Source Code</a>
           </div>
         </div>
-        <div class="card">
+        <div class="card bg-light">
             <img src="img/Projects/thumbnails/"  class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">Pizza-Menu System</h5>
               <p class="card-text"></p>
-              <a href="#" class="btn btn-secondary">Source Code</a>
+              <a href="#" class="btn btn-danger">Source Code</a>
             </div>
           </div>
         <div class="card bg-light">
@@ -241,7 +241,7 @@
           <div class="card-body">
             <h5 class="card-title">The Space Station</h5>
             <p class="card-text">The Space Station is one of my first projects. It's a product of two of the most fundamental languages of Web Development (HTML & CSS).</p>
-            <a href="https://github.com/rshafi2/The-Tech-Academy-Basic-HTML-CSS-Projects/tree/master/The%20Space%20Station%20Project" class="btn btn-secondary">Source Code</a>
+            <a href="https://github.com/rshafi2/The-Tech-Academy-Basic-HTML-CSS-Projects/tree/master/The%20Space%20Station%20Project" class="btn btn-danger">Source Code</a>
           </div>
         </div>
         <div class="card bg-light">
@@ -249,30 +249,32 @@
             <div class="card-body">
               <h5 class="card-title"></h5>
               <p class="card-text"></p>
+              <a href="" class="btn btn-danger">Source Code</a>
             </div>
           </div>
-        <div class="card text-center">
+        <div class="card text-center bg-light">
           <div class="card-body">
             <h5 class="card-title"></h5>
             <p class="card-text"></p>
             <p class="card-text"><small class="text-muted"></small></p>
+            <a href="" class="btn btn-danger">Source Code</a>
           </div>
         </div>
-        <div class="card">
-          <img src="..." class="card-img-top" alt="...">
-        </div>
+        
         <div class="card bg-light">
             <img  style="width:460px;"  src="" class="project-photo" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title"></h5>
               <p class="card-text"></p>
+              <a href="" class="btn btn-danger">Source Code</a>
             </div>
           </div>
-        <div class="card">
+        <div class="card bg-light">
           <div class="card-body">
             <h5 class="card-title"></h5>
             <p class="card-text"> </p>
             <p class="card-text"><small class="text-muted"></small></p>
+            <a href="" class="btn btn-danger">Source Code</a>
           </div>
         </div>
       </div>
