--- a/index.html
+++ b/index.html
@@ -327,7 +327,7 @@
 
 
   <!-- Contact Section -->
-  <section class="page-section bg-secondary" id="contact">
+  <section class="page-section bg-secondary" id="contact"style="background-color:#F5B041;"  >
     <div class="container">
       <div class="row justify-content-center">
         <div class="col-lg-8 text-center">
