--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
       <h2 style="text-align:center; color: #ffffff;"">Projects</h2>
     </div>
     <div class="card-columns">
-        <div class="card bg-light">
+        <div class="card bg-light border border-primary rounded">
           <img  style="width:460px;"  src="img/Projects/thumbnails/AcademyCinemas.png" class="project-photo" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">Academy Cinemas</h5>
