--- a/index.html
+++ b/index.html
@@ -219,8 +219,8 @@
     <div>
       <h2 style="text-align:center; color: #ffffff;"">Projects</h2>
     </div>
-    <div class="card-columns m-1 p-1">
-        <div class="card bg-light border border-primary rounded">
+    <div class="card-columns ">
+        <div class="card bg-light border border-light rounded ml-1">
           <img  style="width:460px;"  src="img/Projects/thumbnails/AcademyCinemas.png" class="project-photo" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">Academy Cinemas</h5>
