--- a/index.html
+++ b/index.html
@@ -327,8 +327,8 @@
 
 
   <!-- Contact Section -->
-  <section class="page-section bg-secondary" id="contact"style="background-color:#F5B041;"  >
-    <div class="container">
+  <section class="page-section bg-secondary" id="contact" style="background-color:#F5B041;"  >
+    <div class="container" style="background-color:#F5B041;" >
       <div class="row justify-content-center">
         <div class="col-lg-8 text-center">
           <h2 class="mt-0 text-uppercase">contact</h2>
