--- a/index.html
+++ b/index.html
@@ -327,7 +327,7 @@
 
 
   <!-- Contact Section -->
-  <section class="page-section bg-secondary" id="contact" style="background-color:#F5B041;"  >
+  <section class="page-section" id="contact" style="background-color:#F5B041;"  >
     <div class="container" style="background-color:#F5B041;" >
       <div class="row justify-content-center" style="background-color:#F5B041;">
         <div class="col-lg-8 text-center">
