--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
         
           <div class="row justify-content-center">
               <div class="col-lg-8 text-center">
-                <h2 class="">Development Skills</h2>
+                <h2 class="text-light">Development Skills</h2>
                 
               </div>
             </div>
@@ -331,7 +331,7 @@
     <div class="container" style="background-color:#F5B041;" >
       <div class="row justify-content-center" style="background-color:#F5B041;">
         <div class="col-lg-8 text-center">
-          <h2 class="mt-0 text-uppercase">contact</h2>
+          <h2 class="mt-0 text-uppercase text-light">contact</h2>
           <hr class="divider my-2" style="size:50px;">
           <p class="text-white my-5">Have a question or want to work together?</p>
 
