--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
           <div class="card-body">
             <h5 class="card-title">Academy Cinemas</h5>
             <p class="card-text">The Academy Cinemas project resulted by purely utilizing the CSS framework, Bootstrap.</p>
-            <a href="#" class="btn btn-danger">Source Code</a>
+            <a href="#" class="btn btn-link">Source Code</a>
           </div>
         </div>
         <div class="card bg-light">
